--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+.black-nav {
+  background : black;
+  width : 100%;
+  display : flex;
+  color : white;
+  padding : 20px;
+}
+
+div {
+  box-sizing : border-box
+}
+.list {
+  text-align : left;
+  padding-left : 20px;
+  border-bottom : 1px solid grey;
+}
