--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,19 @@
 div {
   box-sizing : border-box
 }
+
 .list {
   text-align : left;
   padding-left : 20px;
+  padding-right: 20px;
   border-bottom : 1px solid grey;
+}
+
+button {
+  background-color: #dddddd;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  color: #212121;
+  width: 160px;
+  height: 40px;
 }
