--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,8 @@
 }
 
 div {
-  box-sizing : border-box
+  box-sizing : border-box;  
+  white-space: pre-line;
 }
 
 .list {
@@ -63,4 +64,23 @@ button {
   color: #212121;
   width: 160px;
   height: 40px;
+}
+
+.content {
+  width: 300px;
+}
+
+input {
+  width: 300px;
+  height: 40px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+  color: hsl(0, 0%, 20%);
+  padding: 0px 10px;
 }
