--- a/src/App.css
+++ b/src/App.css
@@ -54,16 +54,29 @@ div {
   text-align : left;
   padding-left : 20px;
   padding-right: 20px;
+  padding-bottom: 10px;
   border-bottom : 1px solid grey;
 }
 
 button {
-  background-color: #dddddd;
-  margin-top: 5px;
-  margin-bottom: 10px;
+  /* background-color: #dddddd;
   color: #212121;
   width: 160px;
+  height: 40px; */
+  width: 160px;
   height: 40px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  background-color: hsl(241, 92%, 62%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+  color: hsl(0, 0%, 90%);
+  padding: 0px 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .content {
