--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
   text-align: center;
+  width: 1024px;
+  margin: auto;
+  padding-bottom: 60px;
 }
 
 .black-nav {
-  background : black;
+  background : rgb(27, 27, 27);
   width : 100%;
   display : flex;
   color : white;
@@ -20,7 +23,7 @@ div {
   padding-left : 20px;
   padding-right: 20px;
   padding-bottom: 10px;
-  border-bottom : 1px solid grey;
+  border-bottom : 1px solid rgb(182, 182, 182);
 }
 
 button {
@@ -31,14 +34,14 @@ button {
   width: 160px;
   height: 40px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-  background-color: hsl(241, 92%, 62%);
+  font-size: 14px;
+  background-color: #f0b7bd;
   border-color: hsl(0, 0%, 80%);
   border-radius: 4px;
   border-style: solid;
   border-width: 1px;
   box-sizing: border-box;
-  color: hsl(0, 0%, 90%);
+  color: hsl(0, 0%, 11%);
   padding: 0px 10px;
   margin-top: 5px;
   margin-bottom: 10px;
