--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,8 @@ button {
   height: 40px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
-  background-color: #f0b7bd;
-  border-color: hsl(0, 0%, 80%);
+  background-color: #ffc1c6;
+  border-color: hsl(0, 0%, 100%);
   border-radius: 4px;
   border-style: solid;
   border-width: 1px;
